[tool.poetry]
name = "e-to-e-mlanalysis"
version = "0.1.0"
description = "ml and data science project"
authors = ["Bettenoch <bettenoch254@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
matplotlib = "^3.9.1.post1"
numpy = "^2.0.1"
pandas = "^2.2.2"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
